--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,1 +1,49 @@
+version: 1.0.{build}
+
+# Environment configuration
+environment:
+  matrix:
+    - platform: x64
+    - platform: x86
+  APPVEYOR_BUILD_WORKER_IMAGE: Visual Studio 2019
+  WDK_SETUP_URL: "https://go.microsoft.com/fwlink/?linkid=2128854"
+
+# Install dependencies
+install:
+  - powershell: |
+      Write-Output 'Downloading and installing the latest WDK from Microsoft...'
+      try {
+          Invoke-WebRequest -Uri $env:WDK_SETUP_URL -OutFile wdksetup.exe -ErrorAction Stop
+          Start-Process -FilePath .\wdksetup.exe -ArgumentList '/quiet' -Wait
+          Write-Output 'WDK installation complete.'
+      }
+      catch {
+          Write-Error "Failed to download or install WDK: $_"
+          exit 1
+      }
+  
+  - powershell: |
+      Write-Output 'Verifying WDK installation...'
+      if (-Not (Test-Path 'C:\Program Files (x86)\Windows Kits\10')) {
+          Write-Error 'WDK installation failed - Windows Kits directory not found!'
+          exit 1
+      }
+      Write-Output 'WDK verified successfully.'
+
+# Build configuration
+build_script:
+  - powershell: |
+      Write-Output "Starting build for $env:platform..."
+      try {
+          $buildOutput = msbuild "driver\DriverProject.sln" /p:Configuration=Release /p:Platform=$env:platform
+          if ($LASTEXITCODE -ne 0) {
+              Write-Error "Build failed with exit code $LASTEXITCODE"
+              exit $LASTEXITCODE
+          }
+          Write-Output "Build completed successfully for $env:platform"
+      }
+      catch {
+          Write-Error "Build failed with error: $_"
+          exit 1
+      }
 
